# personal-rss-updater

./: .gitignore  .pre-commit-config.yaml  CLUADE.md  CONTEXT.md  DEVELOPMENT.md  Makefile  PRECOMMIT_SETUP.md  README.md  RSS_FEATURES.md  blog_states.json  blog_states.json.bak  blogs.json  config.yaml  config.yaml.example  debug_blog.py  manual_selectors.json  pyproject.toml  spec.md  subscriptions-2025-07-12  todo.md
.claude/: CLAUDE.md  thanks.txt
.claude/commands/: brainstorm.md  plan.md
.claude/commands/project_internals/: PROGRESS.md  plan.md  todo.md
.claude/hooks/: smart-lint.sh
.github/workflows/: ci.yml  daily-rss-check.yml  initialize-rss.yml  pre-commit.yml
config/app/: blogs.json  manual_selectors.json
config/claude/commands/: PROGRESS.md  brainstorm.md  commit-and-push.md  organize-repo.md  plan.md  spec.md  todo.md
config/claude/hooks/: smart-lint.sh
data/: blog_states.json  blog_states.json.bak
src/rss_updater/: __init__.py  config.py  constants.py  detector.py  diagnostic.py  emailer.py  initializer.py  main.py  monitor.py  scraper.py  storage.py
src/rss_updater/cli/: __init__.py  commands.py  main.py
src/rss_updater/core/: __init__.py  config.py  models.py
src/rss_updater/detection/: __init__.py  content_analyzer.py  detector.py  pattern_detector.py  post_extractor.py  selector_candidate.py
src/rss_updater/feeds/: __init__.py  detector.py  hybrid_monitor.py  models.py  parser.py  validator.py
src/rss_updater/monitoring/: __init__.py  diagnostic.py  (+1 more)
tests/: __init__.py  test_detection.py  test_feeds.py  test_network_errors.py  test_scraper.py  test_state_consistency.py  test_storage.py
(+15 files in other folders)
